<resources>
    <string name="app_name">ArduinoBluetoothController</string>
    <string name="bluetooth_status_label">Bluetooth</string>
    <string name="bluetooth_status_disconnected">Disconnected</string>
    <string name="bluetooth_status_connecting">Connecting...</string>
    <string name="bluetooth_status_connected">Connected</string>
    <string name="bluetooth_mac_placeholder">MAC: --:--:--:--:--:--</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="arm_panel_title">ARM CONTROL</string>
    <string name="vehicle_panel_title">VEHICLE CONTROL</string>
    <string name="dashboard_title">DEBUG DATA</string>
    <string name="stat_pwm">PWM</string>
    <string name="stat_tilt">Tilt</string>
    <string name="stat_battery">Batt</string>
    <string name="show_log">Show Log</string>
    <string name="dialog_log_title">Realtime Log</string>
    <string name="dialog_select_device">Select a paired device</string>
    <string name="message_no_paired_devices">No paired Bluetooth devices were found.</string>
    <string name="message_bluetooth_not_supported">Bluetooth is not available on this device.</string>
    <string name="message_permission_denied">Bluetooth permission is required.</string>
    <string name="label_log">LOG</string>
    <string name="log_placeholder">No data yet</string>
    <string name="gripper_grab">+</string>
    <string name="gripper_release">-</string>
    <string name="btn_label_base">Base Rot</string>
    <string name="btn_label_link1">Link 1</string>
    <string name="btn_label_link2">Link 2</string>
    <string name="btn_label_gripper">Gripper</string>
    <string name="label_speed">Speed</string>
    <string name="label_angle">Angle</string>
    <string name="open_arm_control">Open Arm Control</string>
    <string name="arm_control_title">ARM CONTROL</string>
    <string name="arm_section_base">Base Rotation</string>
    <string name="arm_section_link1">Link 1</string>
    <string name="arm_section_link2">Link 2</string>
    <string name="angle_placeholder">090 deg</string>
    <string name="link_slider_title">LINK CONTROLS</string>
    <string name="angle_overview_title">ANGLES</string>
    <string name="gripper_section_title">GRIPPER</string>
    <string name="base_section_title">BASE ROTATION</string>
</resources>